# sample-rust-ffi-cpp

./: .gitignore  CMakeLists.txt  README  README.md
.devcontainer/: Dockerfile  devcontainer.json
cpp/: CMakeLists.txt  main.cpp
cpp/exe/: CMakeLists.txt  main.cpp
cpp/lib/: CMakeLists.txt  lib.cpp  lib.h
rust/: CMakeLists.txt  main.rs
rust/exe/: CMakeLists.txt  Cargo.toml  main.rs
rust/exe/src/: main.rs
rust/lib/: CMakeLists.txt  Cargo.toml
rust/lib/src/: lib.rs
